--- a/view/commons/menuComm.html
+++ b/view/commons/menuComm.html
@@ -15,6 +15,10 @@
 #nv .navbar-nav li:first-of-type a{
         min-width: 30px;
 }
+#navcol-2 .nav-item:hover a{
+    color: #f4744c;
+    font-weight: bold;
+}
 </style>
 <nav id="nv" class="navbar navbar-light navbar-expand-md">
     <div class="container-fluid" style="padding-bottom: 5px;">
